--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:h2:mem:hogwarts
+spring.datasource.url=jdbc:h2:mem:hogwarts;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 
+api.endpoint.base-url=/api/v1
