--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:public
+spring.datasource.url=jdbc:h2:mem:public;MODE=MySQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,4 +11,6 @@ spring.sql.init.mode=always
 # Habilita la consola web de H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+api.endpoint.base-url=/api/v1
 
